hbase: normalize system options